@@ -19,21 +19,31 @@ package org.apache.cassandra.triggers;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.concurrent.atomic.AtomicBoolean;
 
+import org.junit.After;
+import org.junit.Assert;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import org.apache.cassandra.SchemaLoader;
-import org.apache.cassandra.schema.Schema;
+import org.apache.cassandra.config.Config.TriggersPolicy;
+import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.cql3.QueryProcessor;
 import org.apache.cassandra.cql3.UntypedResultSet;
-import org.apache.cassandra.db.*;
+import org.apache.cassandra.db.ConsistencyLevel;
+import org.apache.cassandra.db.Mutation;
+import org.apache.cassandra.db.RowUpdateBuilder;
 import org.apache.cassandra.db.partitions.Partition;
 import org.apache.cassandra.exceptions.ConfigurationException;
 import org.apache.cassandra.exceptions.RequestExecutionException;
+import org.apache.cassandra.schema.Schema;
 import org.apache.cassandra.service.StorageService;
 import org.apache.cassandra.utils.FBUtilities;
+import org.assertj.core.api.Assertions;
 
 import static org.apache.cassandra.utils.ByteBufferUtil.toInt;
 import static org.apache.cassandra.utils.Clock.Global.nanoTime;
@@ -42,6 +52,8 @@ import static org.junit.Assert.assertTrue;
 
 public class TriggersTest
 {
+    private static final Logger logger = LoggerFactory.getLogger(TriggersTest.class);
+    private TriggersPolicy originalTriggersPolicy;
     private static boolean triggerCreated = false;
 
     private static String ksName = "triggers_test_ks";
@@ -58,6 +70,7 @@ public class TriggersTest
     public void setup() throws Exception
     {
         StorageService.instance.initServer();
+        originalTriggersPolicy = DatabaseDescriptor.getTriggersPolicy();
 
         String cql = String.format("CREATE KEYSPACE IF NOT EXISTS %s " +
                                    "WITH REPLICATION = {'class': 'SimpleStrategy', 'replication_factor': 1}",
@@ -70,8 +83,10 @@ public class TriggersTest
         cql = String.format("CREATE TABLE IF NOT EXISTS %s.%s (k int, v1 int, v2 int, PRIMARY KEY (k))", ksName, otherCf);
         QueryProcessor.process(cql, ConsistencyLevel.ONE);
 
+        DatabaseDescriptor.setTriggersPolicy(TriggersPolicy.enabled);
+
         // no conditional execution of create trigger stmt yet
-        if (! triggerCreated)
+        if (!triggerCreated)
         {
             cql = String.format("CREATE TRIGGER trigger_1 ON %s.%s USING '%s'",
                                 ksName, cfName, TestTrigger.class.getName());
@@ -80,12 +95,56 @@ public class TriggersTest
         }
     }
 
+    @After
+    public void after()
+    {
+        DatabaseDescriptor.setTriggersPolicy(originalTriggersPolicy);
+    }
+
+    @Test
+    public void testTriggersPolicy()
+    {
+        QueryProcessor.process(String.format("INSERT INTO %s.%s (k, v1) VALUES (0, 0)", ksName, cfName), ConsistencyLevel.ONE);
+        assertUpdateIsAugmented(0, "v1", 0);
+        QueryProcessor.process(String.format("DELETE FROM %s.%s WHERE k = 0", ksName, cfName), ConsistencyLevel.ONE);
+
+        DatabaseDescriptor.setTriggersPolicy(TriggersPolicy.disabled);
+        QueryProcessor.process(String.format("INSERT INTO %s.%s (k, v1) VALUES (0, 0)", ksName, cfName), ConsistencyLevel.ONE);
+
+        UntypedResultSet rs = QueryProcessor.process(String.format("SELECT * FROM %s.%s WHERE k=%s", ksName, cfName, 0), ConsistencyLevel.ONE);
+        assertRowValue(rs.one(), 0, "v1", 0); // from original update
+        assertEquals(-1, rs.one().getInt("v2", -1)); // from trigger
+        QueryProcessor.process(String.format("DELETE FROM %s.%s WHERE k = 0", ksName, cfName), ConsistencyLevel.ONE);
+
+        DatabaseDescriptor.setTriggersPolicy(TriggersPolicy.forbidden);
+        Assertions.assertThatThrownBy(() -> {
+            QueryProcessor.process(String.format("INSERT INTO %s.%s (k, v1) VALUES (0, 0)", ksName, cfName), ConsistencyLevel.ONE);
+        })
+        .isInstanceOf(TriggerDisabledException.class)
+        .hasMessageContaining(TestTrigger.class.getName());
+    }
+
+    @Test
+    public void triggerClassNotInitializedOnCreate()
+    {
+        for (TriggersPolicy policy : new TriggersPolicy[]{TriggersPolicy.disabled, TriggersPolicy.forbidden})
+        {
+            DatabaseDescriptor.setTriggersPolicy(policy);
+            String cql = String.format("CREATE TRIGGER initializationdetector ON %s.%s USING '%s'", ksName, cfName, InitializationDetector.class.getName());
+            QueryProcessor.process(cql, ConsistencyLevel.ONE);
+            Assert.assertFalse(INITIALIZATION_DETECTOR_MARKER.get());
+
+            cql = String.format("DROP TRIGGER initializationdetector ON %s.%s", ksName, cfName);
+            QueryProcessor.process(cql, ConsistencyLevel.ONE);
+        }
+    }
+
     @Test
     public void executeTriggerOnCqlInsert() throws Exception
     {
-        String cql = String.format("INSERT INTO %s.%s (k, v1) VALUES (0, 0)", ksName, cfName);
+        String cql = String.format("INSERT INTO %s.%s (k, v1) VALUES (3, 3)", ksName, cfName);
         QueryProcessor.process(cql, ConsistencyLevel.ONE);
-        assertUpdateIsAugmented(0, "v1", 0);
+        assertUpdateIsAugmented(3, "v1", 3);
     }
 
     @Test
@@ -190,7 +249,6 @@ public class TriggersTest
         assertRowValue(rs.one(), key, "v2", 999); // from trigger
         assertRowValue(rs.one(), key, originColumnName, originColumnValue); // from original update
     }
-    
     private void assertRowValue(UntypedResultSet.Row row, int key, String columnName, Object columnValue)
     {
         assertTrue(String.format("Expected value (%s) for augmented cell %s was not found", key, columnName),
@@ -209,7 +267,8 @@ public class TriggersTest
     {
         public Collection<Mutation> augment(Partition partition)
         {
-            RowUpdateBuilder update = new RowUpdateBuilder(partition.metadata(), FBUtilities.timestampMicros(), partition.partitionKey().getKey());
+            // Use a fixed early timestamp so this update can be deleted
+            RowUpdateBuilder update = new RowUpdateBuilder(partition.metadata(), 1L, partition.partitionKey().getKey());
             update.add("v2", 999);
 
             return Collections.singletonList(update.build());
@@ -245,6 +304,31 @@ public class TriggersTest
         public Collection<Mutation> augment(Partition partition)
         {
             throw new org.apache.cassandra.exceptions.InvalidRequestException(MESSAGE);
+        }
+    }
+
+    public static class NoOpTrigger implements ITrigger
+    {
+        public Collection<Mutation> augment(Partition partition)
+        {
+            return null;
+        }
+    }
+
+    // This is not part of InitializationDetector because if it was, accessing it would initialize the class
+    final static AtomicBoolean INITIALIZATION_DETECTOR_MARKER = new AtomicBoolean();
+    public static class InitializationDetector implements ITrigger
+    {
+
+        static
+        {
+            logger.info("{} static block was executed", InitializationDetector.class.getSimpleName());
+            INITIALIZATION_DETECTOR_MARKER.set(true);
+        }
+
+        public Collection<Mutation> augment(Partition partition)
+        {
+            return null;
         }
     }
 }
